# mal-anime-study

./: LICENSE.md  anime_data.csv  light_novel_counts.csv  plot.py  pulldata.py  pyproject.toml
